--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,9 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# .DS_Store files
+
+.DS_Store
+Grateful.ly/.DS_Store
+Grateful.ly/App/.DS_Store
